--- a/ragljx_py/config.yaml
+++ b/ragljx_py/config.yaml
@@ -17,15 +17,20 @@ qdrant:
   port: 6333
   collection_prefix: "rag_collection"
 
-# OpenAI 配置
-openai:
-  api_key: ""  # 从环境变量读取
-  api_base: "https://api.openai.com/v1"
-  embedding_model: "text-embedding-3-small"
-  embedding_dimensions: 1536
-  chat_model: "gpt-4"
-  temperature: 0.7
-  max_tokens: 2000
+# 嵌入模型配置（用于文档向量化）
+embedding:
+  api_key: ""  # 从环境变量 EMBEDDING_API_KEY 读取
+  api_base: "https://api.openai.com/v1"  # 从环境变量 EMBEDDING_API_BASE 读取
+  model: "text-embedding-3-small"  # 从环境变量 EMBEDDING_MODEL 读取
+  dimensions: 1536
+
+# 对话模型配置（用于 AI 对话）
+chat:
+  api_key: ""  # 从环境变量 CHAT_API_KEY 读取
+  api_base: "https://api.openai.com/v1"  # 从环境变量 CHAT_API_BASE 读取
+  model: "gpt-4"  # 从环境变量 CHAT_MODEL 读取
+  temperature: 0.7  # 从环境变量 CHAT_TEMPERATURE 读取
+  max_tokens: 2000  # 从环境变量 CHAT_MAX_TOKENS 读取
 
 # MinIO 配置（用于获取文件）
 minio:
