--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 # 嵌入模型配置（用于文档向量化）
 # ========================================
 # 推荐使用 OpenAI 的嵌入模型
-EMBEDDING_API_KEY=your_embedding_api_key_here
-EMBEDDING_API_BASE=https://api.openai.com/v1
+EMBEDDING_API_KEY=sk-zk227c9ec189d0bb39972d22b03b30a619e692524568ce2c
+EMBEDDING_API_BASE=https://api.zhizengzeng.com/v1
 EMBEDDING_MODEL=text-embedding-3-small
 
 # 其他可选嵌入模型：
@@ -14,10 +14,10 @@ EMBEDDING_MODEL=text-embedding-3-small
 # ========================================
 # 对话模型配置（用于 AI 对话）
 # ========================================
-# 可以使用 OpenAI 或其他兼容服务
-CHAT_API_KEY=your_chat_api_key_here
-CHAT_API_BASE=https://api.openai.com/v1
-CHAT_MODEL=gpt-4
+# 使用 DeepSeek 对话模型（兼容 OpenAI API）
+CHAT_API_KEY=sk-7ed50a0e6d0a4fe4862d2f33e6ce878e
+CHAT_API_BASE=https://api.deepseek.com/v1
+CHAT_MODEL=deepseek-chat
 
 # OpenAI 可选模型：
 # - gpt-4 (质量最高，成本最高)
