--- a/ragljx_py/requirements.txt
+++ b/ragljx_py/requirements.txt
@@ -1,7 +1,7 @@
 # gRPC
 grpcio==1.60.0
 grpcio-tools==1.60.0
-protobuf==4.25.1
+protobuf>=4.25.1
 
 # LlamaIndex - 使用支持 Python 3.12 的版本
 llama-index==0.10.68
